# yaml-md-viewer

./: .gitignore  AGENT_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: api.ts  filenames.test.ts  filenames.ts  fullscreen.ts  main.ts  models.ts  preview.test.ts  preview.ts  styles.css  zoom.test.ts  zoom.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arguments.rs  commands.rs  document.rs  error.rs  instance.rs  lib.rs  main.rs  menu.rs  models.rs  preview.rs
tests/fixtures/: custom-script.yaml.md  interactive.yaml.md  malformed.yaml.md  valid.yaml.md
